# home-electric

./: .gitignore  CLAUDE.md  POWER_Point_Daily_20240112_20241201_045d57N_0122d61W_LST.csv  context.md  pgn_electric_usage_interval_data_4960010965_1_2024-01-12_to_2024-11-29.csv  pyproject.toml  requirements.txt
.claude/: launch.json
app/: main.py
app/components/: kpi_cards.py  sidebar.py
app/pages/: dashboard.py  modeling.py
data/: events.json
notebooks/: power_use.ipynb
src/analysis/: cost.py  daily_usage.py  events.py
src/data/: cleaning.py  loader.py  schemas.py  temperature_api.py
src/models/: base.py  diagnostics.py  full_model.py  piecewise_linear.py  simple_normal.py
src/viz/: model_plots.py  plots.py
tests/: conftest.py  test_cleaning.py  test_cost.py  test_events.py  test_loader.py  test_models.py  test_temperature_api.py
