[project]
name = "electricity-use"
version = "0.1.0"
description = "Home electricity usage analysis with Bayesian modeling - Streamlit app"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.40.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "plotly>=5.18.0",
    "pymc>=5.26.0",
    "arviz>=0.18.0,<1.0.0",
    "scipy>=1.12.0",
    "xarray>=2024.1.0",
    "requests>=2.31.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
notebooks = [
    "jupyter>=1.0.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"
